# espio

./: README.md  espio.code-workspace  espio.kicad_prl  espio.kicad_pro
datasheets/: PCB Headers and Receptacles Part 5007620481 _ Molex.html  readme.md
datasheets/PCB Headers and Receptacles Part 5007620481 _ Molex-Dateien/: 6X0tlXWc  a.html  circle-exclamation.avif  clientlib-base.css  clientlib-base.lc-41ea097437642d8406c0ef9719f96a77-lc.min.js  launch-58b670bdac3a.min.js  (+3 more)
ota_server/: Cargo.toml
pcb/: #auto_saved_files#  .gitignore  direct.kicad_sch  engine_bay_unit.kicad_sch  espio.kicad_pcb  espio.kicad_prl  espio.kicad_pro  espio.kicad_sch  espio_alt_jumpers.kicad_sch  espio_engine_bay_unit.kicad_sch  fp-info-cache  kombiinstrument.kicad_sch  powernode.kicad_sch  powernode.kicad_sch-bak  pulldown.kicad_sch  spannungsteiler.kicad_sch  switchnode.kicad_sch  ~espio.kicad_pcb.lck  ~espio.kicad_sch.lck
pcb-tiny/: espio.kicad_pcb  espio.kicad_prl  espio.kicad_pro  espio.kicad_sch  fp-info-cache  switchnode.kicad_sch
pcb-v2/: espio.kicad_pcb  espio.kicad_sch  fp-info-cache
pcb_rev3/: .gitignore  espio_rev3.kicad_prl  espio_rev3.kicad_pro  espio_rev3.kicad_sch  switchnode.kicad_sch
software/: .gitignore  Cargo.toml  partitions.csv  readme.md
software/.cargo/: config.toml
software/src/: dev_can_sender.rs  engine_bay_unit.rs  espio.rs  kombiinstrument.rs  logging.rs  main.rs  output_test.rs  stub dev_can_sender.rs  util.rs
software/src/dev_can_sender/: mod.rs
software/src/engine_bay_unit/: mod.rs
software/src/kombiinstrument/: mod.rs
(+39 files in other folders)
