[package]
name = "espio"
version = "0.1.0"
authors = ["Alexander Heuwes <17780186+TheLexoPlexx@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
kombiinstrument = ["default"]
dev_can_sender = ["default"]
engine_bay_unit = ["default"]
rgb_led_fix = ["default"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
  "esp-idf-svc/embassy-sync",
  "esp-idf-svc/critical-section",
  "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.51" }
esp-idf-sys = { version = "0.36", features = ["binstart"] }
esp-idf-hal = "0.45.2"
anyhow = "1.0.86"
enumset = "1.1.6"
embedded-svc = "0.28.1"

[build-dependencies]
embuild = "0.33.0"
